# Eclectic

./: .clang-format  .gitignore  README.md  ceedling
.github/workflows/: ci.yml
C/: .gitignore  CMakeLists.txt
C/CLion/: main.c
C/Ceedling/: ceedling  project.yml  test_crc16.c  test_crc64.c  test_crc8.c  test_memory.c  test_misc.c  test_random.c
C/Eclectic/: crc16.c  crc16.h  crc32.c  crc32.h  crc64.c  crc8.c  crc8.h  list.c  memory.c  memory.h  misc.c  misc.h  project.h  random.c  random.h  utility.h
Ceedling/: ceedling  project.yml  test_crc16.c  test_crc32.c  test_crc64.c  test_crc8.c  test_list.c  test_random.c
Eclectic/CLI/: cli.c  cli.h
Eclectic/CRC/: crc16.c  crc16.h  crc32.c  crc32.h  crc64.c  crc64.h  crc8.c  crc8.h
Eclectic/Data/: list.c  list.h
Eclectic/Miscellaneous/: memory.c  memory.h  misc.c  misc.h  project.h  random.c  random.h
Project/Ceedling/: ceedling  project.yml  test_cli.c  test_random.c
Python/: .gitignore  requirements.txt
Python/CRC/CollectAndGenerate/: collect_and_generate_crc_data.py
Python/CRC/CollectAndGenerate/Template/: crc16.c  crc16.h  crc32.c  crc32.h  crc64.c  crc64.h  crc8.c  crc8.h  test_crc16.c  test_crc32.c  test_crc64.c  test_crc8.c
src/: eclectic.h
src/cli/: cli_helper.h
src/list/: hash_table.h  list.c  list.h  queue.h  set.h  stack.h
src/tree/: tree.c  tree.h
test/: test_cli.c  test_cli_helper.c  test_crc16.c  test_crc32.c  test_crc8.c  test_eclectic.c  test_hash_table.c  test_list.c  test_list_derived.c  test_random.c  test_tree.c
